# Math-Puzzle-Web

./: .envrc  .gitignore  2022-07-17-Hints.md  2022-07-17.md  2022-07-19.md  2022-07-20-Hints.md  2022-07-20.md  2022-07-Hints.md  2022-07.md  2022-08-13-Hints.md  2022-08-13.md  pyproject.toml
.obsidian/: app.json  appearance.json  graph.json  workspace
puzzles/: 2yjT4W8wxBXum9RttUipBB-hints.md  2yjT4W8wxBXum9RttUipBB-puzzle.md  2yjT4W8wxBXum9RttUipBB-solutions.md  2yjT4W8wxBXum9RttUipBB.md  6pVn3BbaY2SPB5LzpwF4ko-hints.md  6pVn3BbaY2SPB5LzpwF4ko-puzzle.md  6pVn3BbaY2SPB5LzpwF4ko-solutions.md  6ry5z6dEs2cuzsFYLzheWR-hints.md  6ry5z6dEs2cuzsFYLzheWR-puzzle.md  6ry5z6dEs2cuzsFYLzheWR-solutions.md  Bajc5uRTJHK2ynyBSK83ah-hints.md  Bajc5uRTJHK2ynyBSK83ah-puzzle.md  DXxfq83R52UnNqWHytvEqA-hints.md  DXxfq83R52UnNqWHytvEqA-puzzle.md  DXxfq83R52UnNqWHytvEqA.md  EvHnJABhzHU5aG3xn3cL5p-hints.md  EvHnJABhzHU5aG3xn3cL5p-puzzle.md  EvHnJABhzHU5aG3xn3cL5p.md  FzJMxj2zy6WWDyaVcGmSec-puzzle.md  FzJMxj2zy6WWDyaVcGmSec.md  QJPw39GoZWGLPNgzmqFXBa-hints.md  QJPw39GoZWGLPNgzmqFXBa-puzzle.md  QJPw39GoZWGLPNgzmqFXBa-solutions.md  RQZXTKug9ZnB7dnetSGsNu-hints.md  RQZXTKug9ZnB7dnetSGsNu-puzzle.md  RQZXTKug9ZnB7dnetSGsNu.md  RciLUwtYwZqqQZShTeX6Au-hints.md  RciLUwtYwZqqQZShTeX6Au-puzzle.md  WrZaptZGP5G4boRw2cWy6n-hints.md  WrZaptZGP5G4boRw2cWy6n-puzzle.md  circular-sums.md  (+25 more)
tools/: .gitignore  count-puzzles  create-new-puzzle  generate-puzzle-id  get-puzzle-id  init-new-puzzle  pyproject.toml  update-doc-version
tools/templates/: template-hints.md  template-puzzle.md  template-solutions.md
(+11 files in other folders)
