[tool.poetry]
name = "math-puzzle-web"
version = "0.0.0"
description = ""
license = "Apache-2.0"
authors = ["Kevin Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
shortuuid = "^1.0"
typer = "^0,>=0.6"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
